--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "A synchronized thread safe delayed queue"
 authors = ["divinerapier"]
 publish = true
 readme = "README.md"
+license = "Apache-2.0"
 
 [dependencies]
 parking_lot = "0.11"
